Style : fixing gaps between elements

--- a/style.css
+++ b/style.css
@@ -92,6 +92,12 @@ header {
 
 main {
   width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  gap: 30px;
 }
 
 .topnews {
@@ -107,7 +113,7 @@ main {
   width: 70%;
   height: 100%;
 
-  padding: 0 10px 0 0;
+  padding: 0 30px 0 0;
 }
 
 .bignews-fig {
